# Techgician

./: Cargo.toml  README.md  Techgician.md  tsafe_roh_kernel_foundations.md
config/: trusted_orgs.yaml
core/specs/: aln_did_stamp_schema.json  alndid_bostrom_stamp_v1.schema.json
cpp/: CMakeLists.txt
cpp/include/techgician/: aln_did_stamp.hpp  validation.hpp
cpp/src/: aln_did_stamp.cpp  validation.cpp
crates/chrono_fairness/src/: lib.rs
crates/libsovereignty_core_c/src/: lib.rs
crates/sovereignty-core/: Cargo.toml
crates/sovereignty-core-cli/: Cargo.toml
crates/sovereignty-core-cli/src/: main.rs
crates/sovereignty-core-js/: Cargo.toml  example.js
crates/sovereignty-core-js/src/: lib.rs
crates/sovereignty-core/src/: artifacts.rs  donutloop.rs  guards.rs  lib.rs  types.rs
crates/sovereigntycore/: Cargo.toml
crates/sovereigntycore/src/: artifacts.rs  lib.rs  types.rs
cyboquatic-core/src/: ecobiostate.rs  ffi_kernel.rs
docs/: ALN-Style-Invariants.md  ALNDID_WBGT_BINDING_DESIGN.md  GITHUB_ROUTING_POLICY.md  INTENT_ROUTING_WBGT_FIRST.md  README.md  honeybee-survival-cybernetical-nanorobotic-research.md
eco_aligned_vc/: Cargo.toml
eco_aligned_vc/src/: lib.rs
js/: package.json
js/src/: alnDidStampValidator.js  chatRouterWrapper.js  index.js
libsovereignty_core_c/: sovereignty_core_c.h  sovereignty_core_cpp.hpp
mojo/src/: aln_did_stamp.mojo  pqc_policy.mojo
opt/techgician/eco_system/src/: traceability_node.rs
qpu/data/shards/: host-augmentation-right.aln
qpudatashards/particles/: perturn-validation-profile-v1.ndjson
rust/: Cargo.toml
rust/src/: aln_did_stamp.rs  lib.rs  route_request.rs  stamp.rs  validation.rs
src/: api.rs  contracts.rs  domains.rs  eco_router.rs  energy_ball.rs  ledger.rs  main.rs  node.json  security.rs  webhook.rs
src/biophysical_chain/: biophysical_objects.rs  biophysical_tags.rs  evolution_protocol.rs  neuro_keys.rs  pattern_library.rs
src/governance/: augmentation_right.rs  techgician_govdefense.rs
src/main/charts/: variables-and-logic.csv
src/main/java/biosphere/: SmartInvariant.java
src/main/schemas/examples/: ALNDIDBostromStampV1-ker-corridors-pqc.json
src/runtime/: augmentation_bootstrap.rs  mod.rs
src/security/: rbac_system.rs
techgician-core/src/aln_stamp/: validator.rs
tests/rust/: aln_did_stamp_integration_tests.rs
uver_bigint_energy_ball/: Cargo.toml
uver_bigint_energy_ball/src/: api.rs  bigint.rs  contracts.rs  domains.rs  energy_ball.rs  ledger.rs  main.rs  security.rs
