[package]
name = "uver_energy_ball_xr"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
parking_lot = "0.12"
once_cell = "1.19"
thiserror = "1.0"
rand = "0.8"
warp = "0.3"
futures = "0.3"
hex = "0.4"
sha2 = "0.10"
sled = "0.34"
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
