[package]
name = "techgician-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Core ALN/DID/Bostrom stamp types and validators for Techgician."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
time = { version = "0.3", features = ["formatting", "parsing"] }
sha2 = "0.10"

[dev-dependencies]
serde_json = "1.0"
