[package]
name = "uver_bigint_energy_ball"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
parking_lot = "0.12"
once_cell = "1.19"
thiserror = "1.0"
num-bigint = "0.4"
num-traits = "0.2"
warp = "0.3"
sled = "0.34"
sha2 = "0.10"
hex = "0.4"
