[package]
name = "sovereignty-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Sovereignty kernel for EVOLVE/SMART/TECH governance with RoH, neurorights, and donutloop logging."
repository = "https://github.com/Doctor0Evil/Techgician"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
sha2 = "0.10"
rust_decimal = { version = "1.36", features = ["serde"] }
# For file IO and paths (std), no extra crate needed.

[features]
default = ["roh", "stake", "neurorights", "donutloop"]
roh = []
stake = []
neurorights = []
donutloop = []
