[package]
name = "sovereigntycore"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Sovereignty core interpreter for Tsafe/RoH, neurorights, stake, and donutloop."
repository = "https://github.com/Doctor0Evil/Techgician"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.36", features = ["serde"] }
thiserror = "1.0"
